Ajuste dos classpath

--- a/cee-admin_parent/cee-admin_model/.settings/org.eclipse.core.resources.prefs
+++ b/cee-admin_parent/cee-admin_model/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,5 @@
-#Sat May 25 14:40:56 BRT 2013
+#Sat Nov 19 21:48:52 BRST 2016
 eclipse.preferences.version=1
 encoding//src/main=UTF-8
-encoding//src/main/resources=UTF-8
+encoding//src/main/java=UTF-8
 encoding//src/test=UTF-8
